css/app.css
/* GLOBAL */
body { background-color: #ddd; }
h1, h2, h3, h4, h5, h6, h7, p, a, ul, ol, table {
  font-family: 'Source Sans Pro', sans-serif;
  color: #444;
}
h2 {
  display: inline-block;
  padding: .25em .5em;
  font-weight: 900;
  text-align: center;
  border: .15em solid #444;
  opacity: .8;
}
h3          { font-weight: 600; }
h3 b        { font-weight: 900; }
b, strong   { font-weight: 600; }


/* HELPER CLASSES */
.info         { opacity: .5; }
.margintop    { margin-top: 1em; }
.hyphens, p {
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}
hr {
  border-bottom: 1px dashed rgba(68,68,68,.5); /* 444 */
  margin-top: .5em;
  margin-bottom: .5em;
}


/* SECTIONS */
.section {
  padding-top: 1.5em;
  padding-bottom: 1.5em;
}
@media screen and (min-width: 40em) {
  .section {
    padding-top: 2.5em;
    padding-bottom: 2.5em;
  }
}



/* CALLOUT */
.callout-wrap {
  margin-top: 1.5em;
}
.callout {
  border: none;
  background-color: rgba(255,255,255,.5);
}
.callout img {
  display: block;
  margin: auto;
  margin-bottom: .5em;
}
.callout h4 {
  text-align: center;
}
.callout.loading {
  opacity: .5;
}

@media screen and (min-width: 40em) {
  .callout {
    margin-bottom: 2em;
  }
  .callout img.ico {
    width: 48px;
    height: 48px;
    opacity: .5;
  }
  .callout.loading {
    padding-top: 4em;
  }
}


/* LINKS & BUTTONS */
a {
  color: #00cc99;
}
a:hover {
  color: #009966;
}
a.button, a.button:visited {
  background-color: #00cc99;
  font-weight: 600;
}
a.button:hover , a.button:active {
  background-color: #009966;
}
a.button.hollow {
  color: #00cc99;
  border-color: #00cc99;
}
a.button.hollow:hover , a.button.hollow:active {
  color: #009966;
  border-color: #009966;
}
a.link {
  font-weight: 600;
  border-bottom: .1em solid rgba(255,255,255,.5);
}
a.link:hover, a.link:active {
  border-bottom: .1em solid rgba(255,255,255,1);
}



/* CTA AREA */
.cta-area {
  margin-top: 3em;
}
.cta-area .button { 
  margin-bottom: 0.1em;
}
@media screen and (min-width: 40em) {
  .cta-area .button {
    padding-top: .7em;
    padding-bottom: .7em;
    font-size: 1.4em;
  }
}

/*
                              
                              
                              
                              
`7MMpMMMb.   ,6"Yb.`7M'   `MF'
  MM    MM  8)   MM  VA   ,V  
  MM    MM   ,pm9MM   VA ,V   
  MM    MM  8M   MM    VVV    
.JMML  JMML.`Moo9^Yo.   W     
                              
                              
*/

#nav {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 100;
}
.nav {
  display: flex;
  justify-content: space-around;
}
.nav a {
  text-align: center;
  flex-basis: 100%;
  padding: .5em 0;
  font-weight: 600;
  color: #fff;
  background-color: rgba(68,68,68,.9); /* 444 */
  margin-right: 1px;
}
.nav a em {
  font-style: normal;
  opacity: .5;
}
.nav a.last {
  margin-right: 0px;
}
.nav a span {
  display: block;
  white-space: nowrap;
  opacity: .75;
}
.nav a:hover {
  background-color: rgba(51,51,51,.9); /* 333 */
}
.nav a.active {
  background-color: rgba(34,34,34,.9); /* 222 */
}
.nav a:hover span,
.nav a.active span {
  opacity: 1;
}
.nav a img {
  margin-top: -2px;
  opacity: .75;
}
.nav a:hover img,
.nav a.active img {
  opacity: 1;
}
#nav a.cta {
  margin-top: 1em;
  font-size: 1em;
  padding: .7em;
}
@media screen and (min-width: 40em) and (max-width: 63.9375em) {
  .nav a span {
    font-size: .8em;
    margin-top: .25em;
    margin-bottom: -.25em;
  }
}
@media screen and (min-width: 64em) {
  #nav {
    margin-left: 0;
    margin-top: 2.5vh;
    width: inherit;
    top: 0;
  }
  .nav {
    display: block;
    width: 11em;
  }
  .nav a {
    display: inline-block;
    margin-bottom: 1px;
    padding-left: .75rem;
    padding-right: 1rem;
  }
  .nav a img {
    margin-right: .5em
  }
  .nav a span {
    display: inline-block;
    white-space: nowrap;
  }
}
@media screen and (min-width: 75em) {
  #nav {
    margin-left: 5%;
    margin-left: calc( 20% - 200px );
  }
}


/* INTRO */

#intro h3 {
  padding-top: 1.5em;
  padding-bottom: 1em;
}
#intro span     { opacity: .5; } 
#intro a        { opacity: .5; }
#intro a:hover  { opacity: 1; }

.mangoweb-logo, 
.techsquat-logo {
  margin-right: 5px;
  margin-left: 5px;
  vertical-align: middle;
  position:relative;  
  top: -.04em;
  height: 1.25em;
}

/*
                                       
                                       
                                       
                                       
 ,pW"Wq.`7MMpdMAo.  .gP"Ya `7MMpMMMb.  
6W'   `Wb MM   `Wb ,M'   Yb  MM    MM  
8M     M8 MM    M8 8M""""""  MM    MM  
YA.   ,A9 MM   ,AP YM.    ,  MM    MM  
 `Ybmd9'  MMbmmd'   `Mbmmd'.JMML  JMML.
          MM                           
        .JMML.                           
*/

#opening h1.brand {
  margin: auto;
  display: inline-block;
  padding: .25em .5em;
  font-weight: 900;
  text-align: center;
  border: .15em solid #00cc99;
  color: #00cc99;
  margin-bottom: .5em;
}
#opening .date h3,
#opening .place h3 {
  margin-top: 1em;
  font-weight: 600;
  margin-bottom: 0;
}
.date em {
  font-style: normal;
  font-weight: 400;
}
.date .nd-wrap  { position: relative; }
.date .nd       { font-weight: 400; }
@media screen and (min-width: 40em) { 
  .date .nd {
    position: absolute;
    top: 2.2em;
    left: -2em;
    width: 6em;
    font-size: 1rem;
    text-align: center;
    font-weight: 400;
  }
}
#opening .tag {
  display: block;
  margin-bottom: -.25em;
  letter-spacing: .025em;
}
#opening .tag::before {
  content: "";
  display: block;
  border-top: 1px dashed #444;
  border-top: 1px dashed rgba(68,68,68,.5); /* 444 */
  margin-bottom: -.9em;
}
#opening .tag b {
  padding: 0 .5em;
  font-weight: 400;
  text-transform: uppercase;
  font-size: .5em;
  background-color: #ddd;
  z-index: 100;
}
#opening .claim {
  text-align: left;
  -webkit-text-align: justify;
  -moz-text-align: justify;  
}
#opening .claim h3 {
  margin-top: 1em;
}
#opening .cta-area {
  padding-bottom: 2.5em;
}

/*
                                     
                  ,,                 
                `7MM                 
                  MM                 
`7M'    ,A    `MF'MMpMMMb.`7M'   `MF'
  VA   ,VAA   ,V  MM    MM  VA   ,V  
   VA ,V  VA ,V   MM    MM   VA ,V   
    VVV    VVV    MM    MM    VVV    
     W      W   .JMML  JMML.  ,V     
                             ,V      
                          OOb"                                                   
*/
img.chip {
  width: 1.6em;
  height: 1.6em;
  display: inline-block;
  line-height: 1em;
  margin-top: -1.3em;
  margin-bottom: -1em;
  margin-right: .25em;
  border-radius: 50%;
}


/*
                                        
                                        
         mm     mm                      
         MM     MM                      
 ,6"Yb.mmMMmm mmMMmm .gP"Ya `7MMpMMMb.  
8)   MM  MM     MM  ,M'   Yb  MM    MM  
 ,pm9MM  MM     MM  8M""""""  MM    MM  
8M   MM  MM     MM  YM.    ,  MM    MM  
`Moo9^Yo.`Mbmo  `Mbmo`Mbmmd'.JMML  JMML.
                                                                                                              
*/

#attendees {
  
}
.locket {
  display: block;
  position: relative;
  margin: auto;
  max-width: 100px;
  text-align: center;
  margin-top: 1em;
  margin-bottom: 1em;
}
.locket img {
  display: inline-block;
  border-radius: 50%;
  margin-bottom: .4em;
}
.locket h3 {
  position: absolute;
  top: 15%;
  width: 100%;
  
  text-align: center;
  vertical-align: middle;
  font-size: 2rem;
  line-height: 1.2em;
  opacity: .5;
  
}
.locket h6 {
  margin-bottom: 0;
  line-height: 1.2em;
}
.locket p {
  line-height: 1em;
}
.locket p.info {
  font-size: .75em;
  margin-top: .1em;
}

/*
                                               
                  ,,                           
                `7MM                           
                  MM                           
`7M'    ,A    `MF'MMpMMMb.  .gP"Ya `7MMpMMMb.  
  VA   ,VAA   ,V  MM    MM ,M'   Yb  MM    MM  
   VA ,V  VA ,V   MM    MM 8M""""""  MM    MM  
    VVV    VVV    MM    MM YM.    ,  MM    MM  
     W      W   .JMML  JMML.`Mbmmd'.JMML  JMML.
                                               
                                               
*/

#when-and-where .info.tag {
  margin-bottom: 0;
}
#when-and-where iframe {
  margin-top: 1em;
  margin-bottom: 1em;
}
#when-and-where img {
  margin-bottom: 1.25em;
}
@media screen and (min-width: 40em) {
  #when-and-where img {
    margin-bottom: 2em;
  }
}

/*
                                           
                       ,,                  
                     `7MM                  
                       MM                  
`7Mb,od8 `7MM  `7MM    MM  .gP"Ya  ,pP"Ybd 
  MM' "'   MM    MM    MM ,M'   Yb 8I   `" 
  MM       MM    MM    MM 8M"""""" `YMMMa. 
  MM       MM    MM    MM YM.    , L.   I8 
.JMML.     `Mbod"YML..JMML.`Mbmmd' M9mmmP' 
                                           
                                           
*/

@media screen and (min-width: 40em) {
  #rules .callout {
    padding-top: 1.5em;
    padding-bottom: 1.5em;
  }
}

/*
                                              
                 ,,                       ,,  
               `7MM                     `7MM  
                 MM                       MM  
,pP"Ybd  ,p6"bo  MMpMMMb.  .gP"Ya    ,M""bMM  
8I   `" 6M'  OO  MM    MM ,M'   Yb ,AP    MM  
`YMMMa. 8M       MM    MM 8M"""""" 8MI    MM  
L.   I8 YM.    , MM    MM YM.    , `Mb    MM  
M9mmmP'  YMbmd'.JMML  JMML.`Mbmmd'  `Wbmd"MML.
                                              
                                              
*/
table tbody {
  border: none;
}

table tbody,
table tbody tr:nth-child(even) {
  background-color: inherit;
}
table tbody tr {
  border-bottom: 1px dashed rgba(68,68,68,.5); /* 444 */
}
table tbody tr td:first-child {
  padding-left: 0;
}
table tbody tr td ul {
  margin-bottom: 0;
}

#schedule table tbody tr td:first-child {
  font-size: 1.4em;
  font-weight: 900;
  color: #00cc99;
}


/*
                        
    ,...                
  .d' ""                
  dM`                   
 mMMmm ,6"Yb.  ,dW"Yvd  
  MM  8)   MM ,W'   MM  
  MM   ,pm9MM 8M    MM  
  MM  8M   MM YA.   MM  
.JMML.`Moo9^Yo.`MbmdMM  
                    MM  
                  .JMML.
*/

@media screen and (min-width: 40em) {
  #faq .question .large-7 {
    padding-top: .4em;
  }
}


/*
                               
    ,...                       
  .d' ""                 mm    
  dM`                    MM    
 mMMmm,pW"Wq.   ,pW"Wq.mmMMmm  
  MM 6W'   `Wb 6W'   `Wb MM    
  MM 8M     M8 8M     M8 MM    
  MM YA.   ,A9 YA.   ,A9 MM    
.JMML.`Ybmd9'   `Ybmd9'  `Mbmo 
                               
                               
*/

  #footer {
    padding-bottom: 10em;
  }

